compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-2/pos/1.3.kt
/*
 * KOTLIN PSI SPEC TEST (POSITIVE)
 *
 * SPEC VERSION: 0.1-435
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 2 -> sentence 1
 * NUMBER: 3
 * DESCRIPTION: Real literals without digits after an exponent mark.
 */

konst konstue = 0.0E

konst konstue = 00.0e
konst konstue = 000.00e-
konst konstue = 0000.000E+

konst konstue = 1.0e
konst konstue = 22.00E+
konst konstue = 333.000e
konst konstue = 4444.0000E
konst konstue = 55555.0e+
konst konstue = 666666.00E-
konst konstue = 7777777.000e
konst konstue = 88888888.0000e
konst konstue = 999999999.0E-

konst konstue = 7.888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888e+
konst konstue = 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e
konst konstue = 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e-
konst konstue = 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e+
